docs(memory): record the P0 result as cross-session memory (appendix A)
New sessions must not re-derive any of this. Appendix A now states, each with the
evidence path: gradlew build green with Loom pinned to 1.17.20 and JDK 21; native
build + ctest 3/3; end-to-end NativeSelfTest PASS with matching layout sums; the ABI
guard probe results; the architecture gate that Fabric Loader 0.19.5 really loads a
preview-compiled mod; the frozen ABI surface (P0 symbols, P1 pathfinding, mirror);
the Java package layout; and a working testbed on port 25566.

It also lists the six host traps that cost real time this round, including the two
that are outright silent failures: an ASCII javac argfile turns the non-ASCII user
profile path into ??? so the classpath stops resolving, and Linker.defaultLookup
cannot see a System.load-ed DLL.